fix: Remove horizontal scroll bar.

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ html {
 
 body {
   color: #4d4d4d;
+  overflow-x: hidden;
 }
 
 footer {
@@ -124,4 +125,3 @@ footer {
 .carousel-control-next-icon {
     background-color: gray;
 }
-
